--- a/frontend/src/components/GroupCard/GroupCard.css
+++ b/frontend/src/components/GroupCard/GroupCard.css
@@ -1,9 +1,15 @@
 .slide-img{
   height: 140px;
+  width: 200px;
   margin-right: 20px;
 }
 
 .slide{
+  width: 800px;
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-top: 1px gray solid;
+  padding-top: 10px;
 }
