update nav bar, add update functionality

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,13 @@
 .hidden{
   display: none
 }
+
+.nav-container{
+  margin: 25px 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-func{
+  column-gap: 10px;
+}
