--- a/frontend/src/components/GroupsPage/GroupsPage.css
+++ b/frontend/src/components/GroupsPage/GroupsPage.css
@@ -26,3 +26,13 @@
   justify-content: left;
   margin-left: 250px;
 }
+
+.active-page{
+  text-decoration: underline;
+  color: green;
+}
+
+.inactive:hover{
+ cursor: pointer;
+ color: red;
+}
