--- a/frontend/src/components/NewGroupForm/NewGroupForm.css
+++ b/frontend/src/components/NewGroupForm/NewGroupForm.css
@@ -1,5 +1,6 @@
 .el-container{
   border-bottom: 1px gray solid;
+
 }
 
 .errors{
@@ -11,4 +12,40 @@
   padding: 10px;
   background-color: red;
   color: white;
+}
+
+.gf-container{
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.el-container > p{
+  width: 60%;
+}
+
+div > input{
+  margin-bottom: 20px;
+}
+
+div> textarea{
+  margin-bottom: 20px;
+}
+
+.gf-flair{
+  font-weight: bold;
+  color: teal;
+
+}
+
+.gf-i-container{
+  margin-top: 20px;
+}
+
+input{
+  width: 350px;
+}
+
+textarea{
+  width: 350px;
+  height: 72px;
 }
