--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -26,6 +26,7 @@
 .profile-dropdown{
   position: absolute;
   right: 50px;
+  top:50px;
   background-color: rgb(185, 185, 185);
   list-style: none;
   padding: 10px;
@@ -38,6 +39,21 @@
   justify-content: center;
 }
 
-.profile-dropdown > li > button {
+/* .profile-dropdown > li > button {
 
-}
+} */
+
+/* .userbutton{
+  margin: 0px 12px;
+  display:flex;
+} */
+
+/* .fa-user-circle{
+  color: black;
+  height: 10px;
+} */
+
+/* .nav-func{
+  display: flex;
+  flex-direction: row;
+} */
