--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -1,3 +1,15 @@
 .userbutton{
   margin: 0px 12px;
+  border: none;
+  background-color: white;
+}
+
+.fa-user-circle{
+  color: rgb(255, 115, 0);
+  font-size: 2.0em;
+}
+
+.nav-func{
+  display: flex;
+  align-items: center;
 }
