--- a/frontend/src/components/GroupDetail/GroupDetail.css
+++ b/frontend/src/components/GroupDetail/GroupDetail.css
@@ -1,25 +1,22 @@
 .header-image{
   width: 450px;
+  height: 300px;
   margin-right: 30px;
 }
 
 .gd-header-container{
   display: flex;
+  margin-bottom: 40px;
 }
 
 .Group-page-container{
-  margin-left: 75px;
+  margin-left: 15%;
   margin-right: 75px;
 }
 
 .header-content > h1{
   margin-top: 0px;
   margin-bottom: 0px;
-}
-
-.header-content > p{
-  margin-top: 8px;
-  margin-bottom: 8px;
 }
 
 .header-content-container{
@@ -38,4 +35,27 @@
 
 .gd-body{
   background-color: rgb(236, 236, 236);
+  margin-left: 15%;
+}
+
+.gd-bgc{
+  background-color: rgb(236, 236, 236);
+  width: 100%;
+  left: 0px;
+  position: absolute;
+  min-height: 470px;
+}
+
+.gd-d{
+  margin-top: 15px;
+}
+
+.gd-fc{
+  display: flex;
+  justify-content: space-around;
+  width: 75%;
+}
+
+.gd-fc > button{
+  padding: 5px;
 }
