--- a/frontend/src/components/EventDetail/EventDetail.css
+++ b/frontend/src/components/EventDetail/EventDetail.css
@@ -1,12 +1,20 @@
 .ed-header-container{
   background-color: rgb(236, 236, 236);
   display: flex;
+  margin-left: 15%;
 }
 
-.header-content{
+.ed-header-image {
+  margin-top: 40px;
+    width: 450px;
+    height: 300px;
+    margin-right: 30px;
+}
+
+.ed-header-content{
   border-radius: 8px;
   background-color: white;
-  margin-top: 10px;
+  margin-top: 40px;
   margin-right: 10px;
   padding-left: 10px;
 }
@@ -18,4 +26,68 @@
   margin-right: 10px;
   padding-left: 10px;
   margin-bottom: 10px;
+}
+
+.ed-description{
+  margin-left: 15%;
+}
+
+.ed-bgc{
+background-color: rgb(236, 236, 236);
+    width: 100%;
+    left: 0px;
+    position: absolute;
+    min-height: -webkit-fill-available;
+}
+
+.fa-clock{
+  font-size: x-large;
+  margin-left: 10px;
+  margin-right: 15px;
+}
+.fa-dollar-sign{
+  font-size: x-large;
+  margin-left: 10px;
+  margin-right: 15px;
+}
+
+.fa-map-pin{
+  font-size: x-large;
+  margin-left: 10px;
+  margin-right: 15px;
+}
+
+.e-time{
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.e-times > p{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.ez{
+  display: flex;
+  flex-direction: row;
+}
+
+.e-bmx > button{
+  margin-left: 50px;
+}
+.special > button{
+  margin-left: 25px;
+}
+
+.ed-gimg{
+  width: 150px;
+  height: 100px;
+  margin: 10px;
+}
+
+.ed-GCL{
+  display: flex;
 }
