--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -27,7 +27,8 @@
   position: absolute;
   right: 50px;
   top:50px;
-  background-color: rgb(185, 185, 185);
+  background-color: rgb(255, 255, 255);
+  border: 1px black solid;
   list-style: none;
   padding: 10px;
 }
