add login button to nav bar if user is not signed in

--- a/frontend/src/components/Navigation/ProfileButton.css
+++ b/frontend/src/components/Navigation/ProfileButton.css
@@ -19,3 +19,15 @@
   display: flex;
   align-items: center;
 }
+
+.nav-func > button {
+  border: none;
+  background: white;
+  color: teal;
+  text-decoration: underline;
+  /* font-size: large; */
+}
+
+.nav-func > button:hover{
+  cursor: pointer;
+}
