--- a/frontend/src/components/GroupCard/GroupCard.css
+++ b/frontend/src/components/GroupCard/GroupCard.css
@@ -1,9 +1,31 @@
 .slide-img{
   height: 140px;
+  width: 200px;
   margin-right: 20px;
 }
 
 .slide{
+  width: auto;
   display: flex;
-  justify-content: center;
+  justify-content: left;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-top: 1px gray solid;
+  padding-top: 10px;
+}
+
+.slide:hover{
+  cursor: pointer;
+}
+
+.gs-con > h3{
+  margin-top: 5px;
+  margin-bottom: 5px;
+  width: 50%;
+}
+
+.s-ic{
+  height: 140px;
+  width: 200px;
+  margin-right: 20px;
 }
