--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,3 +1,60 @@
 .hidden{
   display: none
 }
+
+.Logo{
+  text-decoration: none;
+  font-weight: bold;
+  color: rgb(255, 115, 0);
+  font-size: x-large;
+}
+
+.nav-group{
+  text-decoration: none;
+  font-weight: bold;
+  color: teal;
+}
+
+.nav-container{
+  margin: 25px 30px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: gray 1px solid;
+  padding-bottom: 30px;
+}
+
+.profile-dropdown{
+  position: absolute;
+  right: 50px;
+  top:50px;
+  background-color: rgb(255, 255, 255);
+  border: 1px black solid;
+  list-style: none;
+  padding: 10px;
+}
+
+.profile-dropdown > li {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+/* .profile-dropdown > li > button {
+
+} */
+
+/* .userbutton{
+  margin: 0px 12px;
+  display:flex;
+} */
+
+/* .fa-user-circle{
+  color: black;
+  height: 10px;
+} */
+
+/* .nav-func{
+  display: flex;
+  flex-direction: row;
+} */
