--- a/frontend/src/components/LandingPage/LandPage.css
+++ b/frontend/src/components/LandingPage/LandPage.css
@@ -77,6 +77,7 @@
   margin-top: 0;
 }
 
+
 .join-button{
   background-color: teal;
   color: white;
@@ -89,4 +90,12 @@
   margin-top: 14px;
   display: flex;
   justify-content: center;
+}
+
+.button-container > button {
+  background-color: teal;
+  color: white;
+  padding: 12px;
+  border: none;
+  border-radius: 10px;
 }
